[gd_scene load_steps=4 format=3 uid="uid://dxa7y04pf4x2c"]

[ext_resource type="PackedScene" uid="uid://ut1us53ubf8" path="res://data/models/WallDoorv2.glb" id="1_005v4"]
[ext_resource type="Script" path="res://scripts/wall_door_v2.gd" id="1_pxq5d"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dml2f"]
size = Vector3(2, 2.2, 1.3)

[node name="WallDoorV2" type="Node3D"]
script = ExtResource("1_pxq5d")

[node name="WallDoorv22" parent="." instance=ExtResource("1_005v4")]

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 1)
shape = SubResource("BoxShape3D_dml2f")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]

[editable path="WallDoorv22"]
